first week（python）.txt
Python 3.6.4 (v3.6.4:d48eceb, Dec 19 2017, 06:54:40) [MSC v.1900 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> input()
123
'123'
>>> input()
abc
'abc'
>>> print('hello world')
hello world
>>> "{},{}".format(10,20)
'10,20'
>>> "{1},{0}".format(10,20)
'20,10'
>>> "姓名:{};年龄:{}".format("jinjiu",20)
'姓名:jinjiu;年龄:20'
>>>
>>>
>>> "{:.3f}".format(3.1415926)
'3.142'
>>>
>>> "{:b}".format(100)
'1100100'
>>> "{:x}".format(100)
'64'
>>>
>>> "{:8}:{:8}".format(10,20)
'      10:      20'
>>> "{:<8}:{:>8}".format(10,20)
'10      :      20'
>>>
>>> print("abc"*20)
abcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabc
>>>
>>> import keyword
>>> keyword.kwlist
['False', 'None', 'True', 'and', 'as', 'assert', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']
>>> cd C:\Users\zcy\Documents\GitHub\jinjiu
  File "<stdin>", line 1
    cd C:\Users\zcy\Documents\GitHub\jinjiu
       ^
SyntaxError: invalid syntax
>>> cd ..
  File "<stdin>", line 1
    cd ..
        ^
SyntaxError: invalid syntax
>>> pwd
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'pwd' is not defined
>>>
>>> a=b=c=1
>>> a
1
>>> b
1
>>> a,b,c= 1,2,"test"
>>> a
1
>>> b
2
>>> c
'test'
>>> {:.2f}.format(3.1415926)
  File "<stdin>", line 1
    {:.2f}.format(3.1415926)
     ^
SyntaxError: invalid syntax
>>> "{:.2f}".format(3.1415926)
'3.14'
>>> "{:**.2f}".format(3.1415926)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: Invalid format specifier
>>> "{:+.2f}".format(3.1415926)
'+3.14'
>>> "{:-.2f}".format(3.1415926)
'3.14'
>>> "{:+.2f}".format(-2)
'-2.00'
>>> "{:0f}".format(1.567)
'1.567000'
>>> "{:.0f}".format(1.567)
'2'
>>> "{:0>4d}".format(2)
'0002'
>>> "{:x>4d}".format(2)
'xxx2'
>>> "{:x<4d}".format(2)
'2xxx'
>>> "{:,}".format(10000000)
'10,000,000'
>>> "{:.2%}".format(123.456)
'12345.60%'
>>> "{:.10d}".format(123)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: Precision not allowed in integer format specifier
>>> "{:10d}".format(123)
'       123'
>>> "{:<10d}".format(123)
'123       '
>>> "{:^10d}".format(123)
'   123    '
>>>